<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/bar_heigth"
        android:background="@drawable/top_bar"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btCancel"
            android:layout_width="@dimen/bar_img_width"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/menu_btn_selector_xml"
            android:src="@drawable/menu_btn_go_back" />

        <TextView
            style="@style/TopTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/newAr" />

        <ImageButton
            android:id="@+id/btSave"
            android:layout_width="@dimen/bar_img_width"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/menu_btn_selector_xml"
            android:src="@drawable/menu_btn_save_ar" />
    </RelativeLayout>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="@dimen/text_heigth"
        android:layout_marginTop="10dp" >

        <TextView
            style="@style/ArTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account" >
        </TextView>

        <EditText
            android:id="@+id/etAccount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_selector_xml"
            android:numeric="decimal" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="@dimen/text_heigth"
            android:layout_weight="1" >

            <TextView
                style="@style/ArTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type" >
            </TextView>

            <Spinner
                android:id="@+id/spArTypeName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_selector_xml" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="@dimen/text_heigth"
            android:layout_weight="1" >
            <Button  
                android:id="@+id/btManageArType"
                android:layout_width="120dp"
                android:layout_height="fill_parent"
                android:background="@drawable/btn_selector_xml"
                android:text="@string/manageType"
                />
        </TableRow>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="@dimen/text_heigth"
        android:layout_marginTop="10dp" >

        <TextView
            style="@style/ArTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment" />

        <EditText
            android:id="@+id/etComment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_selector_xml" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            style="@style/ArTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" >
        </TextView>

        <DatePicker
            android:id="@+id/dpCreateDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/text_selector_xml"
            android:endYear="2100"
            android:startYear="1900" >
        </DatePicker>
    </TableRow>

</LinearLayout>