<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rlManageType"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/text_normal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:src="@drawable/setting_manage_type" />

        <TextView
            style="@style/ArTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:text="@string/manageType" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:src="@drawable/setting_go" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlBackup"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_normal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:src="@drawable/setting_backup" />

        <TextView
            style="@style/ArTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:text="@string/backUp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:src="@drawable/setting_go" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <Button
             android:id="@+id/btExit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/btn_exit_xml"
            android:gravity="center"
            android:text="@string/exit" />
    </RelativeLayout>

</LinearLayout>